--- a/styles.css
+++ b/styles.css
@@ -5,36 +5,143 @@
   font-family: "Titillium Web", sans-serif;
   margin: 0;
   padding: 0;
+  font-size: 10px;
+  font-weight: 600;
 }
 
-nav {
-  height: 12vh;
-  background-color: #dbd9d9;
-  display: flex;
-  flex-direction: row;
-  flex: 1;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Josefin Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
 }
 
-.nav-left {
-  display: flex;
-  align-items: center;
-  padding-left: 2rem;
-}
-
-.nav-logo {
-  width: 4em;
-}
-
-.nav-right {
-  text-align: right;
-}
-
-.nav-right a {
-  color: #ffffff;
+a {
   text-decoration: none;
-  font-size: 13px;
+}
 
-  display: inline-block;
-  padding: 8px 12px;
-  position: relative;
+.navbar {
+  background-color: #000000;
+  color: #ffffff;
+  height: 13vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: #ffffff 0.5rem solid;
+}
+
+.navbar a {
+  width: auto;
+  height: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+
+.navbar a h3 {
+  color: #ffffff;
+  font-size: 2.5rem;
+}
+
+.navbar a img {
+  width: 20%;
+  overflow: hidden;
+}
+
+.footer {
+  background-color: #000000;
+  color: #ffffff;
+  height: 8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: #ffffff 0.5rem solid;
+}
+
+.footer h2 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.main {
+  background: linear-gradient(
+    to bottom,
+    rgba(150, 21, 171, 1),
+    rgba(33, 8, 27, 1)
+  );
+}
+
+.main-h {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mpOne {
+  background: #000000;
+  color: #ffffff;
+  width: 75vw;
+  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+  margin: 3rem;
+  padding: 1.8rem;
+  border-radius: 2.5rem;
+  font-size: 2.5rem;
+  text-align: center;
+  border: #ffffff 0.25rem solid;
+}
+
+.mpS {
+  background: transparent;
+  color: #ffffff;
+  font-size: 2.5rem;
+  text-align: center;
+  margin: 2rem;
+}
+
+.mGif {
+  border-radius: 4rem;
+  padding: 1.8rem;
+  width: 75vw;
+}
+
+.mImg {
+  width: 50vw;
+}
+
+.mButton {
+  background: #000000;
+  color: #ffffff;
+  width: 75vw;
+  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+  margin-bottom: 6rem;
+  padding: 1.8rem;
+  border-radius: 2.5rem;
+  font-size: 2.5rem;
+  text-align: center;
+  border: #ffffff 0.25rem solid;
+}
+
+.nav-links {
+  position: fixed;
+  background: #8b271f;
+  height: 100vh;
+  width: 200px;
+  top: 0;
+  right: -200px;
+  text-align: left;
+  z-index: 2;
+  transition: 0.6s;
+}
+
+@media all and (min-width: 600px) {
+  html {
+    display: none;
+  }
 }
