--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap");
 
 * {
-  font-family: "Titillium Web", sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
-  font-weight: 600;
+    font-family: "Titillium Web", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    font-weight: 600;
 }
 
 h1,
@@ -15,133 +15,150 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Josefin Sans", sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
+    font-family: "Josefin Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .navbar {
-  background-color: #000000;
-  color: #ffffff;
-  height: 13vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: #ffffff 0.5rem solid;
+    background-color: #000000;
+    color: #ffffff;
+    height: 13vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: #ffffff 0.5rem solid;
 }
 
 .navbar a {
-  width: auto;
-  height: auto;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
 }
 
 .navbar a h3 {
-  color: #ffffff;
-  font-size: 2.5rem;
+    color: #ffffff;
+    font-size: 2.5rem;
 }
 
+
 .navbar a img {
-  width: 20%;
-  overflow: hidden;
+    width: 20%;
+    overflow: hidden;
 }
 
 .footer {
-  background-color: #000000;
-  color: #ffffff;
-  height: 8vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: #ffffff 0.5rem solid;
+    background-color: #000000;
+    color: #ffffff;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: #ffffff 0.5rem solid;
 }
 
 .footer h2 {
-  font-size: 2rem;
-  font-weight: 500;
+    font-size: 2rem;
+    font-weight: 500;
 }
 
 .main {
-  background: linear-gradient(
-    to bottom,
-    rgba(150, 21, 171, 1),
-    rgba(33, 8, 27, 1)
-  );
+    background: linear-gradient(to bottom,
+            rgba(150, 21, 171, 1),
+            rgba(33, 8, 27, 1));
 }
 
 .main-h {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .mpOne {
-  background: #000000;
-  color: #ffffff;
-  width: 75vw;
-  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
-  margin: 3rem;
-  padding: 1.8rem;
-  border-radius: 2.5rem;
-  font-size: 2.5rem;
-  text-align: center;
-  border: #ffffff 0.25rem solid;
+    background: #000000;
+    color: #ffffff;
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+    margin: 3rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: #ffffff 0.25rem solid;
 }
 
 .mpS {
-  background: transparent;
-  color: #ffffff;
-  font-size: 2.5rem;
-  text-align: center;
-  margin: 2rem;
+    background: transparent;
+    color: #ffffff;
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 2rem;
 }
 
 .mGif {
-  border-radius: 4rem;
-  padding: 1.8rem;
-  width: 75vw;
+    border-radius: 4rem;
+    padding: 1.8rem;
+    width: 75vw;
 }
 
 .mImg {
-  width: 50vw;
+    width: 50vw;
 }
 
 .mButton {
-  background: #000000;
-  color: #ffffff;
-  width: 75vw;
-  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
-  margin-bottom: 6rem;
-  padding: 1.8rem;
-  border-radius: 2.5rem;
-  font-size: 2.5rem;
-  text-align: center;
-  border: #ffffff 0.25rem solid;
+    background: #000000;
+    color: #ffffff;
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+    margin-bottom: 6rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: #ffffff 0.25rem solid;
 }
 
 .nav-links {
-  position: fixed;
-  background: #8b271f;
-  height: 100vh;
-  width: 200px;
-  top: 0;
-  right: -200px;
-  text-align: left;
-  z-index: 2;
-  transition: 0.6s;
+    position: fixed;
+    background: #8b271f;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 0.6s;
+}
+
+.hamburger {
+    width: 80vw;
+    height: 100vh;
+    background-color: #8b271f;
+    z-index: 9999999;
+    border-radius: 2.5rem, 2.5rem, 0, 0;
+    color: #ffffff;
+}
+
+.hamburger img {
+    width: 20vw;
+    padding: 2rem;
+}
+
+.hamburger a {
+    color: #ffffff;
 }
 
 @media all and (min-width: 600px) {
-  html {
-    display: none;
-  }
+    html {
+        display: none;
+    }
 }
