--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap");
 
 * {
-  font-family: "Titillium Web", sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
-  font-weight: 600;
+    font-family: "Titillium Web", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    font-weight: 600;
 }
 
 h1,
@@ -15,225 +15,223 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Josefin Sans", sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
+    font-family: "Josefin Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .navbar button {
-  width: auto;
-  height: auto;
-  height: 13vh;
-  display: flex;
-  background-color: #000000;
-  justify-content: space-evenly;
-  align-items: center;
-  border: none;
-  border-bottom: #ffffff 0.5rem solid;
-  flex-direction: row;
+    width: auto;
+    height: auto;
+    height: 13vh;
+    display: flex;
+    background-color: #1f1f1f;
+    justify-content: space-evenly;
+    align-items: center;
+    border: none;
+    border-bottom: #ffffff 0.5rem solid;
+    flex-direction: row;
 }
 
 .navbar button h3 {
-  color: #ffffff;
-  font-size: 2.5rem;
+    color: #ffffff;
+    font-size: 2.5rem;
 }
 
 .navbar button img {
-  width: 20%;
-  overflow: hidden;
+    width: 20%;
+    overflow: hidden;
 }
 
 .footer {
-  background-color: #000000;
-  color: #ffffff;
-  height: 8vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: #ffffff 0.5rem solid;
+    background-color: #000000;
+    color: #ffffff;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: #ffffff 0.5rem solid;
 }
 
 .footer h2 {
-  font-size: 2rem;
-  font-weight: 500;
+    font-size: 2rem;
+    font-weight: 500;
 }
 
 .main {
-  background: linear-gradient(
-    to bottom,
-    rgba(150, 21, 171, 1),
-    rgba(33, 8, 27, 1)
-  );
+    background: linear-gradient(to bottom,
+            rgba(150, 21, 171, 1),
+            rgba(33, 8, 27, 1));
 }
 
 .main-h {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .mpOne {
-  background: #000000;
-  color: #ffffff;
-  width: 75vw;
-  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
-  margin: 3rem;
-  padding: 1.8rem;
-  border-radius: 2.5rem;
-  font-size: 2.5rem;
-  text-align: center;
-  border: #ffffff 0.25rem solid;
+    background: #000000;
+    color: #ffffff;
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+    margin: 3rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: #ffffff 0.25rem solid;
 }
 
 .button {
-  background: rgba(108, 0, 192, 1);
-  color: #ffffff;
-  width: auto;
-  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
-  margin: 2rem;
-  padding: 1.5rem;
-  border-radius: 2.5rem;
-  font-size: 2.5rem;
-  text-align: center;
-  border: #ffffff 0.25rem solid;
+    background: rgba(108, 0, 192, 1);
+    color: #ffffff;
+    width: auto;
+    box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+    margin: 2rem;
+    padding: 1.5rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: #ffffff 0.25rem solid;
 }
 
 .mpS {
-  background: transparent;
-  color: #ffffff;
-  font-size: 2.5rem;
-  text-align: center;
-  margin: 2rem;
+    background: transparent;
+    color: #ffffff;
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 2rem;
 }
 
 .mGif {
-  border-radius: 4rem;
-  padding: 1.8rem;
-  width: 75vw;
+    border-radius: 4rem;
+    padding: 1.8rem;
+    width: 75vw;
 }
 
 .mImg {
-  width: 50vw;
+    width: 50vw;
 }
 
 .mButton {
-  background: #000000;
-  color: #ffffff;
-  width: 75vw;
-  box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
-  margin-bottom: 6rem;
-  padding: 1.8rem;
-  border-radius: 2.5rem;
-  font-size: 2.5rem;
-  text-align: center;
-  border: #ffffff 0.25rem solid;
+    background: #000000;
+    color: #ffffff;
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 rgba(58, 255, 26, 1);
+    margin-bottom: 6rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: #ffffff 0.25rem solid;
 }
 
 .hamburger {
-  position: fixed;
-  background: linear-gradient(to bottom, rgba(51, 51, 51, 1), rgba(0, 0, 0, 1));
-  height: 100vh;
-  width: 85vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  top: 0;
-  left: -200vw;
-  text-align: left;
-  z-index: 2;
-  border-radius: 0rem 5rem 5rem 0rem;
-  transition: 0.6s;
+    position: fixed;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 1), rgba(0, 0, 0, 1));
+    height: 100vh;
+    width: 85vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    top: 0;
+    left: -200vw;
+    text-align: left;
+    z-index: 2;
+    border-radius: 0rem 5rem 5rem 0rem;
+    transition: 0.6s;
 }
 
 #hamburger {
-  position: fixed;
-  background: linear-gradient(to bottom, rgba(51, 51, 51, 1), rgba(0, 0, 0, 1));
-  height: 100vh;
-  width: 85vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  top: 0;
-  left: -200vw;
-  text-align: left;
-  z-index: 2;
-  border-radius: 0rem 5rem 5rem 0rem;
-  transition: 0.6s;
+    position: fixed;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 1), rgba(0, 0, 0, 1));
+    height: 100vh;
+    width: 85vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    top: 0;
+    left: -200vw;
+    text-align: left;
+    z-index: 2;
+    border-radius: 0rem 5rem 5rem 0rem;
+    transition: 0.6s;
 }
 
 .hamburger button {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .hamburger button img {
-  width: 20vw;
-  padding: 2rem;
+    width: 20vw;
+    padding: 2rem;
 
-  position: fixed;
-  top: 3%;
+    position: fixed;
+    top: 3%;
 }
 
 .hamb-a {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  top: 20%;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 20%;
+    justify-content: center;
+    align-items: center;
 }
 
 .hamb-a a {
-  font-size: 2rem;
-  width: 75%;
+    font-size: 2rem;
+    width: 75%;
 }
 
 .heading {
-  font-size: 3.3rem;
-  padding: 1rem;
-  text-align: center;
+    font-size: 3.3rem;
+    padding: 1rem;
+    text-align: center;
 }
 
 .calc-head {
-  font-size: 2.2rem;
-  padding: 1rem;
-  text-align: left;
+    font-size: 2.2rem;
+    padding: 1rem;
+    text-align: left;
 }
 
 .calc-coor {
-  padding: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem;
-  margin-bottom: 0;
-  padding-bottom: 0;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .calc-coor h3 {
-  font-family: "Titillium Web", sans-serif;
-  font-size: 1.8rem;
-  padding-bottom: 1rem;
+    font-family: "Titillium Web", sans-serif;
+    font-size: 1.8rem;
+    padding-bottom: 1rem;
 }
 
 .calc-coor input {
-  width: 40vw;
-  height: 5vh;
-  padding: 1rem;
-  font-size: 1.5rem;
-  margin: 1.2rem;
-  margin-left: 0;
+    width: 40vw;
+    height: 5vh;
+    padding: 1rem;
+    font-size: 1.5rem;
+    margin: 1.2rem;
+    margin-left: 0;
 }
 
 @media all and (min-width: 600px) {
-  html {
-    display: none;
-  }
+    html {
+        display: none;
+    }
 }
