--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,7 @@ a {
 
 .feedback h2 {
     font-size: 1.9rem;
+    text-align: center;
     margin-bottom: 1rem;
 }
 
@@ -333,6 +334,62 @@ a {
     font-size: 2.5rem;
     color: var(--text-sec);
 }
+
+
+#feedback-form {
+    width: 80vw;
+    margin: 0 auto 0 auto;
+    border: 5px #fff solid;
+    display: flex;
+    background: linear-gradient(rgba(209, 0, 146, 0.4), rgba(209, 0, 146, 0.4)),
+        linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
+    padding: 4vw;
+    color: var(--text-sec);
+    border-radius: 2.5rem;
+    flex-direction: column;
+}
+
+
+.feedback__form__part {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10vw;
+}
+
+.feedback__form__part label {
+    font-size: 2rem;
+    padding-bottom: 2%;
+}
+
+.feedback__form__part input {
+    width: 75vw;
+    margin: auto;
+    padding-bottom: 0;
+    font-size: 2rem;
+}
+
+.alt__feedback__form__part {
+    display: inline;
+    flex-direction: column;
+    margin-bottom: 10vw;
+}
+
+.alt__feedback__form__part h2 {
+    font-size: 2rem;
+}
+
+.alt__feedback__form__part label {
+    font-size: 2rem;
+}
+
+.alt__feedback__form__part input {
+    width: 5vw;
+    height: 5vw;
+    margin: auto;
+    padding: 50px;
+}
+
+
 
 @media all and (min-width: 600px) {
     html {
