--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
     --text-sec: rgb(255, 255, 255);
 }
 
+/*      UNIVERSAL       */
+
 * {
     font-family: "Titillium Web", sans-serif;
     margin: 0;
@@ -32,6 +34,47 @@ h6 {
 a {
     text-decoration: none;
 }
+
+.button {
+    background: var(--text-pri);
+    color: var(--text-sec);
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 var(--tet);
+    margin-bottom: 6rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: var(--text-sec) 0.35rem solid;
+}
+
+.altButton {
+    background: var(--text-pri);
+    color: var(--text-sec);
+    width: 75vw;
+    box-shadow: -1.4rem 1.4rem 0 0 var(--tet);
+    margin-bottom: 6rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2rem;
+    text-align: center;
+    border: var(--text-sec) 0.35rem solid;
+}
+
+
+.headings {
+    background: var(--text-pri);
+    color: var(--text-sec);
+    margin: 3rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: var(--text-sec) 0.25rem solid;
+}
+
+
+/*      NAV BAR     */
 
 .navbar {
     width: 100vw;
@@ -91,86 +134,7 @@ a {
     text-align: center;
 }
 
-.footer {
-    background-color: var(--text-pri);
-    color: var(--text-sec);
-    height: 10vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    border-top: var(--text-sec) 0.5rem solid;
-}
-
-.footer h1 {
-    margin-top: 2%;
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-
-.footer h2 {
-    font-size: 2rem;
-    font-weight: 500;
-}
-
-
-.main {
-    background: linear-gradient(to bottom,
-            var(--pri),
-            var(--sec));
-}
-
-.main-h {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.mpOne {
-    background: var(--text-pri);
-    color: var(--text-sec);
-    width: 75vw;
-    margin: 3rem;
-    padding: 1.8rem;
-    border-radius: 2.5rem;
-    font-size: 2.5rem;
-    text-align: center;
-    border: var(--text-pri) 0.25rem solid;
-}
-
-
-.mpS {
-    background: transparent;
-    color: var(--text-sec);
-    font-size: 2.5rem;
-    text-align: center;
-    margin: 2rem;
-}
-
-.mGif {
-    border-radius: 4rem;
-    padding: 1.8rem;
-    width: 75vw;
-}
-
-.mImg {
-    width: 50vw;
-}
-
-.mButton {
-    background: var(--text-pri);
-    color: var(--text-sec);
-    width: 75vw;
-    box-shadow: -1.4rem 1.4rem 0 0 var(--tet);
-    margin-bottom: 6rem;
-    padding: 1.8rem;
-    border-radius: 2.5rem;
-    font-size: 2.5rem;
-    text-align: center;
-    border: var(--text-sec) 0.35rem solid;
-}
+/*      HAMBURGER       */
 
 #hamburger {
     position: fixed;
@@ -239,8 +203,79 @@ a {
     width: 85%;
 }
 
+/*      FOOTER        */
 
-.button {
+.footer {
+    background-color: var(--text-pri);
+    color: var(--text-sec);
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: var(--text-sec) 0.5rem solid;
+}
+
+.footer h1 {
+    margin-top: 2%;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+
+.footer h2 {
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+/*      HOME PAGE       */
+
+
+.main {
+    background: linear-gradient(to bottom,
+            var(--pri),
+            var(--sec));
+}
+
+.main-h {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.mpOne {
+    background: var(--text-pri);
+    color: var(--text-sec);
+    width: 75vw;
+    margin: 3rem;
+    padding: 1.8rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border: var(--text-pri) 0.25rem solid;
+}
+
+
+.mpS {
+    background: transparent;
+    color: var(--text-sec);
+    font-size: 2.5rem;
+    text-align: center;
+    margin: 2rem;
+}
+
+.mGif {
+    border-radius: 4rem;
+    padding: 1.8rem;
+    width: 75vw;
+}
+
+.mImg {
+    width: 50vw;
+}
+
+.mButton {
     background: var(--text-pri);
     color: var(--text-sec);
     width: 75vw;
@@ -260,6 +295,8 @@ a {
     text-align: center;
 }
 
+/*      RESOURCES PAGE      */
+
 .calc {
     height: auto;
     padding: 5vw;
@@ -270,7 +307,7 @@ a {
 
 .calc-section {
     background: linear-gradient(rgba(209, 0, 146, 0.4), rgba(209, 0, 146, 0.4)),
-    linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
+        linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
     padding: 5vw;
     padding-bottom: 10vw;
     margin-bottom: 7vw;
@@ -329,20 +366,10 @@ a {
     font-size: 2rem;
     margin-bottom: 10000px;
     display: inline;
-    
+
 }
 
-.headings {
-    background: var(--text-pri);
-    color: var(--text-sec);
-    margin: 3rem;
-    padding: 1.8rem;
-    border-radius: 2.5rem;
-    font-size: 2.5rem;
-    text-align: center;
-    border: var(--text-sec) 0.25rem solid;
-}
-
+/*      FEEDBACK PAGE       */
 
 .feedback {
     height: auto;
@@ -481,6 +508,8 @@ input[type=submit] {
     display: flex;
 }
 
+/*      RESULTS PAGE        */
+
 .results {
     height: 80vh;
     padding: 5vw;
@@ -500,19 +529,6 @@ input[type=submit] {
     margin-bottom: 1rem;
 }
 
-
-.altButton {
-    background: var(--text-pri);
-    color: var(--text-sec);
-    width: 75vw;
-    box-shadow: -1.4rem 1.4rem 0 0 var(--tet);
-    margin-bottom: 6rem;
-    padding: 1.8rem;
-    border-radius: 2.5rem;
-    font-size: 2rem;
-    text-align: center;
-    border: var(--text-sec) 0.35rem solid;
-}
 
 @media all and (min-width: 600px) {
     html {
